Revision history for JSON-Schema-Modern

{{$NEXT}}
          - fix number/integer differentiation on small-int systems

0.536     2021-12-30 05:32:44Z
          - very large/small numbers are now properly accomodated in all
            cases, including from JSON-serialized data

0.535     2021-12-28 06:38:37Z
          - mark more tests TODO (temporarily!) for small-int systems

0.534     2021-12-27 21:05:34Z
          - clarify exit statuses for 'json-schema-eval'
          - fix numeric tests for architectures with small int size
          - fix handling of unsigned ints that cannot be represented in a
            signed int

0.533     2021-12-23 19:45:11Z
          - fix exit statuses in json-schema-eval

0.532     2021-12-22 19:14:06Z
          - add media_type decoders for application/schema+json,
            application/schema-instance+json
          - add 'json-schema-eval' executable, for ad-hoc evaluation

0.531     2021-12-06 05:39:53Z
          - add method to add format implementations after construction
          - treat media_type names case-insensitively, as per RFC6838,
            and lookups support wildcards (get_media_type('text/plain')
            will match an entry for 'text/*' or '*/*)

0.530     2021-12-03 16:44:23Z
          - fix hash slice syntax that is not available before perl 5.28

0.529     2021-12-03 04:00:26Z
          - added FREEZE and THAW callbacks to assist with serialization

0.528     2021-11-30 06:17:29Z
          - evaluation callback sub signature has changed, to add $data
          - minor performance improvement during evaluation

0.527     2021-11-26 00:53:42Z
          - fixes to base64 and json decoders used in the Content vocabulary

0.526     2021-11-23 05:11:46Z
          - fix evaluate() callbacks for keywords that have no
            runtime-specific actions
          - optional support for contentEncoding, contentMediaType and
            contentSchema with the validate_content_schemas option and